docker: file config finish